2.0: Port to 1.21.1 neoforge